--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -167,15 +167,12 @@
 
 @inbook{panigrahi_use_2025,
   author    = {Panigrahi, S. and Vidyarthi, V. K.},
-  editor    = {Sefelnasr, A. and Sherif, M. and Singh, V. P.},
   title     = {Assessing the Suitability of SPI and SPEI in Steppe Hot and Arid Climatic Zones in India},
-  booktitle = {Water Resources Management and Sustainability: Solutions for Arid Regions },
+  editor    = {Sefelnasr, A. and Sherif, M. and Singh, V. P.},
+  booktitle = {Water Resources Management and Sustainability: Solutions for Arid Regions},
   year      = {2025},
   publisher = {Springer Nature Switzerland},
-  address   = {Cham},
   pages     = {201--216},
-  abstract  = {Steppe Hot and desert Climatic Zones present distinct problems and opportunities for managing water resources in the region. This study aims to compare and evaluate the suitability of the Standardỉzed Precipitation Index (SPI) and Standardỉzed Precipitation Evapotranspiration Index (SPEI) for some of the Steppe Hot and Arid Climatic Subdivisions (SHACS) in the Indian Meteorological Subdivisions. The 1{\textdegree}{\thinspace}{\texttimes}{\thinspace}1{\textdegree} resolution meteorological data for SHACS obtained from the Indian Meteorological Department (IMD), Pune was employed in this study. The results demonstrate that SPI and SPEI classify the majority of drought events in the moderate category across all evaluation periods. Both of these indices recognized Tamilnadu with maximum extreme drought events. The correlation values are observed to be maximum for Delhi {\&} Haryana subdivision (0.86) and minimum for Gujarat subdivision (0.64) across 3-month timescales. It is also observed that the correlation values increase with increasing assessment periods for Delhi {\&} Haryana and Gujarat subdivisions. However, for Tamilnadu subdivision correlation values continuously decline in the increasing assessment periods with the values of the correlation from 0.79 to 0.66. The results obtained from the Modified Mann--Kendall Test (MMKT) indicate that a significant decreasing trend exists for SPEI across all the assessment periods for all the subdivisions considered in this study as their p-values are less than 0.05. Further, considering SPEI, it is observed that the Tamilnadu Subdivision has high Z-Score values (in the range of − 17.25 to − 11.52) as compared to the Z-score values for other subdivisions (ranging from − 5.16 to − 3.05) which show that out of the three SHACS, Tamilnadu is emerging to be the hotspot region for meteorological drought over the years. The results obtained from the analysis based on identifying actual drought years show that the SPEI identified 13 drought years as compared to SPI which identified 11 out of the 16 actual drought years in the study region.},
-  isbn      = {978-3-031-80520-2},
   doi       = {10.1007/978-3-031-80520-2_12}
 }
 
@@ -184,6 +181,6 @@
   title     = {SPEI: A simple Python package to calculate and visualize drought indices},
   year      = {2025},
   publisher = {Zenodo},
-  version   = {latest},
+  version   = {version: latest},
   doi       = {10.5281/zenodo.10816741}
 }
