whoopsie wrong figure

--- a/paper/paper.ipynb
+++ b/paper/paper.ipynb
@@ -312,7 +312,7 @@
     "ax.xaxis.set_major_locator(mpl.dates.YearLocator(5))\n",
     "ax.xaxis.set_minor_locator(mpl.dates.YearLocator())\n",
     "ax.set_xlim(pd.Timestamp(\"1990\"), pd.Timestamp(\"2020\"))\n",
-    "fig.savefig(\"figures/spei_heatmap.png\", dpi=300, bbox_inches=\"tight\")"
+    "ax.get_figure().savefig(\"figures/spei_heatmap.png\", dpi=300, bbox_inches=\"tight\")"
    ]
   }
  ],
