--- a/paper/paper.ipynb
+++ b/paper/paper.ipynb
@@ -99,7 +99,9 @@
     }
    ],
    "source": [
-    "fig, axd = plt.subplot_mosaic([[\"meteo\"], [\"sp\"]], figsize=(7.0, 3.3), sharex=True, layout=\"constrained\")\n",
+    "fig, axd = plt.subplot_mosaic(\n",
+    "    [[\"meteo\"], [\"sp\"]], figsize=(7.0, 3.3), sharex=True, layout=\"constrained\"\n",
+    ")\n",
     "\n",
     "axd[\"meteo\"].plot(prec.index, prec, linewidth=0.8, color=\"C0\")\n",
     "axd[\"meteo\"].plot(evap.index, evap, linewidth=0.8, color=\"C6\")\n",
@@ -263,7 +265,9 @@
     "idx = data.index[20]\n",
     "cdf_idx = cdf.at[idx]\n",
     "ppf_idx = sps.norm.ppf(cdf_idx)\n",
-    "print(f\"Data index: {idx.strftime('%Y')}, Data value: {data.loc[idx]:0.1f} CDF: {cdf_idx:0.2f}, PPF: {ppf_idx:0.2f}\")\n",
+    "print(\n",
+    "    f\"Data index: {idx.strftime('%Y')}, Data value: {data.loc[idx]:0.1f} CDF: {cdf_idx:0.2f}, PPF: {ppf_idx:0.2f}\"\n",
+    ")\n",
     "axd[\"cdf\"].plot(\n",
     "    [data.loc[idx], data.loc[idx], np.max(data)],\n",
     "    [0.0, cdf_idx, cdf_idx],\n",
@@ -436,7 +440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
