--- a/paper/paper.ipynb
+++ b/paper/paper.ipynb
@@ -61,7 +61,8 @@
     "df = pd.read_csv(\"data/series.csv\", index_col=0, parse_dates=True)\n",
     "prec = df[\"prec\"]\n",
     "evap = df[\"evap\"]\n",
-    "surplus = (prec - evap).resample(\"MS\").sum()\n",
+    "surplusd = prec - evap\n",
+    "surplus = surplusd.resample(\"MS\").sum()\n",
     "head = df[\"head\"]"
    ]
   },
@@ -76,6 +77,7 @@
     "    series=surplus,\n",
     "    dist=dist,\n",
     "    timescale=1,\n",
+    "    # fit_freq=\"MS\",\n",
     ")\n",
     "sispei.fit_distribution()\n",
     "\n",
@@ -408,7 +410,7 @@
     {
      "data": {
       "text/plain": [
-       "Dist(dist=<scipy.stats._continuous_distns.gamma_gen object at 0x7f90c7680980>, loc=np.float64(-443.1059444253351), scale=np.float64(1.6575770723785141))"
+       "Dist(dist=<scipy.stats._continuous_distns.gamma_gen object at 0x7f6090bda270>, loc=np.float64(-443.1059444253351), scale=np.float64(1.6575770723785141))"
       ]
      },
      "execution_count": 9,
@@ -440,7 +442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
