write something on climdex

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -184,3 +184,11 @@
   version   = {version: latest},
   doi       = {10.5281/zenodo.10816741}
 }
+
+@online{climdex,
+  title   = {Climdex: climate extremes indices},
+  author  = {L. Alexander and M. Donat, M. Bador, N. Herold, J. L. Vazquez-Aguirre, R. Dunn, P. L. Nguyen, R. Isphording, Y. Singh},
+  url     = {\url{https://www.climdex.org/}},
+  urldate = {2025-04-23},
+  year    = {2025}
+}
