fix ref climdex

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -187,8 +187,8 @@
 
 @online{climdex,
   title   = {Climdex: climate extremes indices},
-  author  = {L. Alexander and M. Donat, M. Bador, N. Herold, J. L. Vazquez-Aguirre, R. Dunn, P. L. Nguyen, R. Isphording, Y. Singh},
-  url     = {\url{https://www.climdex.org/}},
+  author  = {L. Alexander and M. Donat and M. Bador and N. Herold and J. L. Vazquez-Aguirre and R. Dunn and P. L. Nguyen and R. Isphording and Y. Singh},
+  url     = {https://www.climdex.org/},
   urldate = {2025-04-23},
   year    = {2025}
 }
