--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -189,6 +189,14 @@
   title   = {Climdex: climate extremes indices},
   author  = {L. Alexander and M. Donat and M. Bador and N. Herold and J. L. Vazquez-Aguirre and R. Dunn and P. L. Nguyen and R. Isphording and Y. Singh},
   url     = {https://www.climdex.org/},
-  urldate = {2025-04-23},
+  urldate = {2025-04-24},
+  year    = {2025}
+}
+
+@online{vonk_spei_github,
+  author  = {Vonk, M. A.},
+  title   = {SPEI},
+  url     = {https://github.com/martinvonk/spei},
+  urldate = {2025-04-24},
   year    = {2025}
 }
