--- a/paper/paper.ipynb
+++ b/paper/paper.ipynb
@@ -83,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"data/meteo.csv\", index_col=0, parse_dates=True)\n",
+    "df = pd.read_csv(\"meteo.csv\", index_col=0, parse_dates=True)\n",
     "prec = df[\"prec\"]\n",
     "evap = df[\"evap\"]\n",
     "surplusd = prec - evap\n",
