comments from the professor

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -200,3 +200,53 @@
   urldate = {2025-04-24},
   year    = {2025}
 }
+
+@techreport{thom_gamma_1996,
+  author      = {Thom, H. C. S.},
+  title       = {Some Methods of Climatological Analysis},
+  year        = {1966},
+  type        = {WMO Technical Note},
+  number      = {81},
+  institution = {World Meteorological Organization},
+  address     = {Geneva}
+}
+
+@techreport{wmo_spi_2012,
+  author      = {Svoboda, M. and Hayes, M. and Wood, D. A.},
+  title       = {Standardized Precipitation Index User Guide},
+  year        = {2012},
+  type        = {WMO Technical Document},
+  number      = {1090},
+  institution = {World Meteorological Organization},
+  address     = {Geneva}
+}
+
+
+@book{sheffield_droughtdefinition_2011,
+  author    = {Sheffield, Justin and Wood, Eric F.},
+  title     = {Drought: Past Problems and Future Scenarios},
+  publisher = {Taylor \& Francis Group},
+  year      = {2011}
+}
+
+@article{dracup_droughtdefinition_1980,
+  author  = {Dracup, John A. and Lee, Kil Seong and Paulson Jr., Edwin G.},
+  title   = {On the definition of droughts},
+  journal = {Water Resources Research},
+  volume  = {16},
+  number  = {2},
+  pages   = {297-302},
+  doi     = {https://doi.org/10.1029/WR016i002p00297},
+  year    = {1980}
+}
+
+@article{vanloon_hydrodrought_2015,
+  author  = {Van Loon, Anne F.},
+  title   = {Hydrological drought explained},
+  journal = {WIREs Water},
+  volume  = {2},
+  number  = {4},
+  pages   = {359-392},
+  doi     = {10.1002/wat2.1085},
+  year    = {2015}
+}
