--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -250,3 +250,13 @@
   doi     = {10.1002/wat2.1085},
   year    = {2015}
 }
+
+@techreport{edwards_transformation_1997,
+  author      = {Edwards, Daniel C. and McKee, Thomas B.},
+  title       = {Characteristics of 20th Century Drought in the United States at Multiple Time Scales},
+  institution = {Colorado State University, Department of Atmospheric Science},
+  type        = {Climatology Report},
+  number      = {97-2},
+  year        = {1997},
+  address     = {Fort Collins, CO}
+}
