--- a/paper/paper.ipynb
+++ b/paper/paper.ipynb
@@ -24,6 +24,7 @@
     "import scipy.stats as sps\n",
     "from cycler import cycler\n",
     "from matplotlib import patheffects\n",
+    "from scipy.stats._survival import EmpiricalDistributionFunction\n",
     "\n",
     "import spei as si\n",
     "\n",
@@ -176,14 +177,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def plot_ecdf(\n",
     "    ax: plt.Axes,\n",
     "    data: pd.Series,\n",
-    "    ecdf: \"EmpiricalDistributionFunction\",\n",
+    "    ecdf: EmpiricalDistributionFunction,\n",
     "    s: float,\n",
     "    color: str,\n",
     "    label: str,\n",
@@ -554,7 +555,9 @@
     "        fontsize=mpl.rcParams[\"legend.fontsize\"] - 0.5,\n",
     "        horizontalalignment=\"right\",\n",
     "        verticalalignment=\"bottom\",\n",
-    "        bbox=dict(boxstyle=\"round\", facecolor=\"white\", alpha=0.5, edgecolor=bbox_edgecolor),\n",
+    "        bbox=dict(\n",
+    "            boxstyle=\"round\", facecolor=\"white\", alpha=0.5, edgecolor=bbox_edgecolor\n",
+    "        ),\n",
     "    )\n",
     "\n",
     "\n",
