--- a/doc/examples/example05_multiyear_drought.ipynb
+++ b/doc/examples/example05_multiyear_drought.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Analyzing multi-year droughts\n",
     "\n",
-    "After van Mourik, J. and Ruijsch, D. and van der Wiel, K. and Hazeleger, W. and Wanders, N. (2025) - [Regional drivers and characteristics of multi-year droughts](https://dx.doi.org/10.2139/ssrn.4974995)"
+    "After van Mourik, J. and Ruijsch, D. and van der Wiel, K. and Hazeleger, W. and Wanders, N. (2025) - [Regional drivers and characteristics of multi-year droughts](https://doi.org/10.1016/j.wace.2025.100748)"
    ]
   },
   {
@@ -262,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
