--- a/paper/paper.ipynb
+++ b/paper/paper.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,6 +696,35 @@
     "ax.xaxis.set_minor_locator(mpl.dates.YearLocator(1))\n",
     "ax.set_xlim(pd.Timestamp(\"1990\"), pd.Timestamp(\"2020\"))\n",
     "ax.get_figure().savefig(\"figures/spei_heatmap.png\", dpi=300, bbox_inches=\"tight\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'SI' object has no attribute 'ppf'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m thres = \u001b[43msispei\u001b[49m\u001b[43m.\u001b[49m\u001b[43mppf\u001b[49m(\u001b[32m0.3\u001b[39m)\n\u001b[32m      2\u001b[39m si.plot.threshold(\n\u001b[32m      3\u001b[39m     surplus,\n\u001b[32m      4\u001b[39m     thres,\n\u001b[32m   (...)\u001b[39m\u001b[32m      8\u001b[39m     figsize=(\u001b[32m7.0\u001b[39m, \u001b[32m2.5\u001b[39m),\n\u001b[32m      9\u001b[39m )\n",
+      "\u001b[31mAttributeError\u001b[39m: 'SI' object has no attribute 'ppf'"
+     ]
+    }
+   ],
+   "source": [
+    "thres = sispei.ppf(0.3)\n",
+    "si.plot.threshold(\n",
+    "    surplus,\n",
+    "    thres,\n",
+    "    title=\"Threshold\",\n",
+    "    xlabel=\"Precipitation surplus (mm)\",\n",
+    "    ylabel=\"Cumulative probability\",\n",
+    "    figsize=(7.0, 2.5),\n",
+    ")"
    ]
   }
  ],
