--- a/doc/examples/example06_treshold.ipynb
+++ b/doc/examples/example06_treshold.ipynb
@@ -138,17 +138,19 @@
    "id": "41ab4ace",
    "metadata": {},
    "source": [
-    "## Get threshold"
+    "## Get threshold\n",
+    "\n",
+    "Choose arbitrary threshold based on quantile of the distribution. Can be any threshold the user wants as well. Only then the threshold time series has to be created manually."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "62530ad6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "speithr = sispei.ppf(0.3)  # choose arbitrary threshold based on quantile of the distribution"
+    "speithr = sispei.ppf(0.3) # 30% quantile threshold"
    ]
   },
   {
