updat threshold plot with kwargs

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -181,8 +181,8 @@
   title     = {SPEI: A simple Python package to calculate and visualize drought indices},
   year      = {2025},
   publisher = {Zenodo},
-  version   = {version: latest},
-  doi       = {10.5281/zenodo.10816741}
+  version   = {v0.8.0},
+  doi       = {10.5281/zenodo.10816740}
 }
 
 @online{alexander_climdex_2025,
