--- a/doc/examples/example07_knmi.ipynb
+++ b/doc/examples/example07_knmi.ipynb
@@ -5,7 +5,9 @@
    "id": "87fd561f",
    "metadata": {},
    "source": [
-    "# KNMI Drougt Indices"
+    "# KNMI Drougt Indices\n",
+    "\n",
+    "J.P.M. Witte, G.A.P.H. van den Eertwegh and P.J.J.F. Torfs (2025) - [Absolute Meteorological Drought Indices Validated Against Irrigation Amounts](https://doi.org/10.3390/w17071056)."
    ]
   },
   {
@@ -824,7 +826,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
