add ref to crameri 2020

--- a/doc/examples/example07_knmi.ipynb
+++ b/doc/examples/example07_knmi.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "131815ed",
    "metadata": {},
    "outputs": [
@@ -58,8 +58,7 @@
     }
    ],
    "source": [
-    "import hydropandas as hpd\n",
-    "\n",
+    "# import hydropandas as hpd\n",
     "# prec = hpd.PrecipitationObs.from_knmi(\n",
     "#     meteo_var=\"RH\",\n",
     "#     stn=260,\n",
