--- a/doc/examples/example04_package_comparison.ipynb
+++ b/doc/examples/example04_package_comparison.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
    ],
    "source": [
     "df = pd.read_csv(\"data/B32C0572_DEBILT.csv\", index_col=0, parse_dates=True)\n",
-    "df.index.name = \"date\" #\n",
+    "df.index.name = \"date\"\n",
     "prec = df[\"Prec [m/d] 260_DEBILT\"].multiply(1e3).rename(\"rain\")\n",
     "head = df[\"Head [m] B32C0572_DEBILT\"].rename(\"B32C0572\").dropna()\n",
     "\n",
@@ -667,7 +667,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4
  },
