--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,17 +1,17 @@
 @article{scipy_paper_2020,
-  author  = {Virtanen, Pauli and Gommers, Ralf and Oliphant, Travis E. and
-             Haberland, Matt and Reddy, Tyler and Cournapeau, David and
-             Burovski, Evgeni and Peterson, Pearu and Weckesser, Warren and
-             Bright, Jonathan and {van der Walt}, St{\'e}fan J. and
-             Brett, Matthew and Wilson, Joshua and Millman, K. Jarrod and
-             Mayorov, Nikolay and Nelson, Andrew R. J. and Jones, Eric and
-             Kern, Robert and Larson, Eric and Carey, C J and
-             Polat, {\.I}lhan and Feng, Yu and Moore, Eric W. and
-             {VanderPlas}, Jake and Laxalde, Denis and Perktold, Josef and
-             Cimrman, Robert and Henriksen, Ian and Quintero, E. A. and
-             Harris, Charles R. and Archibald, Anne M. and
-             Ribeiro, Ant{\^o}nio H. and Pedregosa, Fabian and
-             {van Mulbregt}, Paul and {SciPy 1.0 Contributors}},
+  author  = {Virtanen, P. and Gommers, R. and Oliphant, T. E. and
+             Haberland, M. and Reddy, T. and Cournapeau, D. and
+             Burovski, E. and Peterson, P. and Weckesser, W. and
+             Bright, J. and {van der Walt}, S. J. and
+             Brett, M. and Wilson, J. and Millman, K. J. and
+             Mayorov, N. and Nelson, A. R. J. and Jones, E. and
+             Kern, R. and Larson, E. and Carey, CJ. and
+             Polat, I. and Feng, Y. and Moore, E. W. and
+             {VanderPlas}, J. and Laxalde, D. and Perktold, J. and
+             Cimrman, R. and Henriksen, I. and Quintero, E. A. and
+             Harris, C. R. and Archibald, A. M. and
+             Ribeiro, A. H. and Pedregosa, F. and
+             {van Mulbregt}, P. and {SciPy 1.0 Contributors}},
   title   = {{SciPy} 1.0: Fundamental Algorithms for Scientific Computing in {Python}},
   journal = {Nature Methods},
   year    = {2020},
@@ -223,25 +223,25 @@
 
 
 @book{sheffield_droughtdefinition_2011,
-  author    = {Sheffield, Justin and Wood, Eric F.},
+  author    = {Sheffield, J. and Wood, E. F.},
   title     = {Drought: Past Problems and Future Scenarios},
   publisher = {Taylor \& Francis Group},
   year      = {2011}
 }
 
 @article{dracup_droughtdefinition_1980,
-  author  = {Dracup, John A. and Lee, Kil Seong and Paulson Jr., Edwin G.},
+  author  = {Dracup, J. A. and Lee, K. S. and {Paulson Jr.}, E. G.},
   title   = {On the definition of droughts},
   journal = {Water Resources Research},
   volume  = {16},
   number  = {2},
   pages   = {297-302},
-  doi     = {https://doi.org/10.1029/WR016i002p00297},
+  doi     = {10.1029/WR016i002p00297},
   year    = {1980}
 }
 
 @article{vanloon_hydrodrought_2015,
-  author  = {Van Loon, Anne F.},
+  author  = {{van Loon}, A. F.},
   title   = {Hydrological drought explained},
   journal = {WIREs Water},
   volume  = {2},
@@ -252,7 +252,7 @@
 }
 
 @techreport{edwards_transformation_1997,
-  author      = {Edwards, Daniel C. and McKee, Thomas B.},
+  author      = {Edwards, D. C. and McKee, T. B.},
   title       = {Characteristics of 20th Century Drought in the United States at Multiple Time Scales},
   institution = {Colorado State University, Department of Atmospheric Science},
   type        = {Climatology Report},
@@ -260,3 +260,37 @@
   year        = {1997},
   address     = {Fort Collins, CO}
 }
+
+@article{vanrooy_rai_1965,
+  author  = {{van Rooy}, M. P.},
+  title   = {A Rainfall Anomaly Index Independent of Time and Space},
+  journal = {Notos},
+  year    = {1965},
+  volume  = {14},
+  pages   = {43}
+}
+
+@article{hansel_mrai_2016,
+  author  = {Hänsel, S. and Schucknecht, A. and Matschullat, J.},
+  title   = {The Modified Rainfall Anomaly Index ({mRAI})—is this an alternative to the {Standardised Precipitation Index} ({SPI}) in evaluating future extreme precipitation characteristics?},
+  journal = {Theoretical and Applied Climatology},
+  year    = {2016},
+  volume  = {123},
+  number  = {3},
+  pages   = {827-844},
+  doi     = {10.1007/s00704-015-1389-y}
+}
+
+
+@article{witte_knmi_2025,
+  author  = {Witte, J. P. M. and {van den Eertwegh}, G. A. P. H. and Torfs, P. J. J. F.},
+  title   = {Absolute Meteorological Drought Indices Validated Against Irrigation Amounts},
+  journal = {Water},
+  volume  = {17},
+  year    = {2025},
+  number  = {7},
+  doi     = {10.3390/w17071056}
+}
+
+
+
