update knmi notebook

--- a/doc/examples/example07_knmi.ipynb
+++ b/doc/examples/example07_knmi.ipynb
@@ -44,19 +44,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "131815ed",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/martin/repos/SPEI/.venv/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import hydropandas as hpd\n",
     "# prec = hpd.PrecipitationObs.from_knmi(\n",
@@ -515,27 +506,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>DIgdd</th>\n",
-       "      <td>110.2</td>\n",
-       "      <td>91.1</td>\n",
-       "      <td>33.3</td>\n",
-       "      <td>113.0</td>\n",
-       "      <td>80.8</td>\n",
-       "      <td>93.5</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>90.3</td>\n",
-       "      <td>126.1</td>\n",
-       "      <td>12.9</td>\n",
+       "      <td>120.9</td>\n",
+       "      <td>110.7</td>\n",
+       "      <td>75.8</td>\n",
+       "      <td>109.9</td>\n",
+       "      <td>169.4</td>\n",
+       "      <td>113.4</td>\n",
+       "      <td>219.3</td>\n",
+       "      <td>226.5</td>\n",
+       "      <td>194.6</td>\n",
+       "      <td>172.6</td>\n",
        "      <td>...</td>\n",
-       "      <td>61.2</td>\n",
-       "      <td>145.6</td>\n",
-       "      <td>311.9</td>\n",
-       "      <td>178.2</td>\n",
-       "      <td>293.0</td>\n",
-       "      <td>85.9</td>\n",
-       "      <td>254.3</td>\n",
-       "      <td>135.5</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>89.9</td>\n",
+       "      <td>119.6</td>\n",
+       "      <td>143.4</td>\n",
+       "      <td>337.4</td>\n",
+       "      <td>177.5</td>\n",
+       "      <td>325.8</td>\n",
+       "      <td>119.8</td>\n",
+       "      <td>279.3</td>\n",
+       "      <td>201.8</td>\n",
+       "      <td>126.4</td>\n",
+       "      <td>87.3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -543,11 +534,14 @@
        "</div>"
       ],
       "text/plain": [
-       "        1959  1960  1961   1962  1963  1964  1965  1966   1967  1968  ...  \\\n",
-       "DIgdd  110.2  91.1  33.3  113.0  80.8  93.5   4.4  90.3  126.1  12.9  ...   \n",
+       "        1959   1960  1961   1962   1963   1964   1965   1966   1967   1968  \\\n",
+       "DIgdd  120.9  110.7  75.8  109.9  169.4  113.4  219.3  226.5  194.6  172.6   \n",
        "\n",
-       "       2016   2017   2018   2019   2020  2021   2022   2023  2024  2025  \n",
-       "DIgdd  61.2  145.6  311.9  178.2  293.0  85.9  254.3  135.5   1.0  89.9  \n",
+       "       ...   2016   2017   2018   2019   2020   2021   2022   2023   2024  \\\n",
+       "DIgdd  ...  119.6  143.4  337.4  177.5  325.8  119.8  279.3  201.8  126.4   \n",
+       "\n",
+       "       2025  \n",
+       "DIgdd  87.3  \n",
        "\n",
        "[1 rows x 67 columns]"
       ]
@@ -615,27 +609,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>DIwet</th>\n",
-       "      <td>179.1</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-14.8</td>\n",
-       "      <td>29.1</td>\n",
-       "      <td>58.5</td>\n",
-       "      <td>-15.1</td>\n",
-       "      <td>-5.2</td>\n",
-       "      <td>50.6</td>\n",
-       "      <td>-12.4</td>\n",
+       "      <td>184.4</td>\n",
+       "      <td>112.6</td>\n",
+       "      <td>157.8</td>\n",
+       "      <td>176.0</td>\n",
+       "      <td>169.4</td>\n",
+       "      <td>113.4</td>\n",
+       "      <td>382.3</td>\n",
+       "      <td>350.0</td>\n",
+       "      <td>194.6</td>\n",
+       "      <td>232.1</td>\n",
        "      <td>...</td>\n",
-       "      <td>-1.1</td>\n",
-       "      <td>9.8</td>\n",
-       "      <td>172.7</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>87.9</td>\n",
-       "      <td>-2.6</td>\n",
-       "      <td>109.1</td>\n",
-       "      <td>-21.1</td>\n",
-       "      <td>-2.6</td>\n",
-       "      <td>48.0</td>\n",
+       "      <td>253.6</td>\n",
+       "      <td>164.1</td>\n",
+       "      <td>337.4</td>\n",
+       "      <td>189.7</td>\n",
+       "      <td>325.8</td>\n",
+       "      <td>129.5</td>\n",
+       "      <td>279.3</td>\n",
+       "      <td>239.3</td>\n",
+       "      <td>310.2</td>\n",
+       "      <td>141.9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -643,11 +637,14 @@
        "</div>"
       ],
       "text/plain": [
-       "        1959  1960  1961  1962  1963  1964  1965  1966  1967  1968  ...  2016  \\\n",
-       "DIwet  179.1   2.4  -1.0 -14.8  29.1  58.5 -15.1  -5.2  50.6 -12.4  ...  -1.1   \n",
+       "        1959   1960   1961   1962   1963   1964   1965   1966   1967   1968  \\\n",
+       "DIwet  184.4  112.6  157.8  176.0  169.4  113.4  382.3  350.0  194.6  232.1   \n",
        "\n",
-       "       2017   2018  2019  2020  2021   2022  2023  2024  2025  \n",
-       "DIwet   9.8  172.7   0.3  87.9  -2.6  109.1 -21.1  -2.6  48.0  \n",
+       "       ...   2016   2017   2018   2019   2020   2021   2022   2023   2024  \\\n",
+       "DIwet  ...  253.6  164.1  337.4  189.7  325.8  129.5  279.3  239.3  310.2   \n",
+       "\n",
+       "        2025  \n",
+       "DIwet  141.9  \n",
        "\n",
        "[1 rows x 67 columns]"
       ]
