--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -185,7 +185,7 @@
   doi       = {10.5281/zenodo.10816741}
 }
 
-@online{climdex,
+@online{alexander_climdex_2025,
   title   = {Climdex: climate extremes indices},
   author  = {L. Alexander and M. Donat and M. Bador and N. Herold and J. L. Vazquez-Aguirre and R. Dunn and P. L. Nguyen and R. Isphording and Y. Singh},
   url     = {https://www.climdex.org/},
