add better knmi comparison

--- a/doc/examples/example04_package_comparison.ipynb
+++ b/doc/examples/example04_package_comparison.ipynb
@@ -16,6 +16,9 @@
     "* pastas (Python)\n",
     "* SPEI (R)\n",
     "\n",
+    "Future:\n",
+    "* [KNMI](https://gitlab.com/KNMI-OSS/climexp/climexp_numerical/-/blob/be0f081a9d62856e4c52a370e70fec2ddfc45cfa/src/calcSPI3.f)\n",
+    "\n",
     "## Required packages"
    ]
   },
