add some difficulty warnings for installing packages and running the notebook

--- a/doc/examples/example04_package_comparison.ipynb
+++ b/doc/examples/example04_package_comparison.ipynb
@@ -16,7 +16,9 @@
     "* pastas (Python)\n",
     "* SPEI (R)\n",
     "\n",
-    "Future:\n",
+    "Please note that it can be difficult to install these packages. SPEI (R) requires the R library. Pastas depends on Numba which has strict requirements for NumPy. Climate Indices only supports Python 3.11 and lower. Therefore running this notebook can be cumbersome.\n",
+    "\n",
+    "Future comparisons:\n",
     "* [KNMI](https://gitlab.com/KNMI-OSS/climexp/climexp_numerical/-/blob/be0f081a9d62856e4c52a370e70fec2ddfc45cfa/src/calcSPI3.f)\n",
     "\n",
     "## Required packages"
@@ -24,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +52,6 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import pastas as ps\n",
     "import scipy.stats as scs\n",
     "\n",
     "import spei as si\n",
@@ -506,10 +507,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pastas as ps\n",
+    "\n",
     "sgi = si.sgi(head, fit_freq=\"ME\")\n",
     "sgi_pastas = ps.stats.sgi(head)"
    ]
@@ -693,7 +696,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4
  },
