--- a/doc/examples/example01_indices.ipynb
+++ b/doc/examples/example01_indices.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -70,10 +70,10 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"data/B32C0572_DEBILT.csv\", index_col=0, parse_dates=True)\n",
+    "df = pd.read_csv(\"data/DEBILT.csv\", index_col=0, parse_dates=True)\n",
     "prec = df[\"Prec [m/d] 260_DEBILT\"].multiply(1e3).rename(\"prec\")\n",
     "evap = df[\"Evap [m/d] 260_DEBILT\"].multiply(1e3).rename(\"evap\")\n",
-    "head = df[\"Head [m] B32C0572_DEBILT\"].rename(\"B32C0572\").dropna()\n",
+    "head = df[\"Head [m] DEBILT\"].rename(\"B32C0572\").dropna()\n",
     "\n",
     "fig, ax = plt.subplots(3, 1, figsize=(12, 8), sharex=True)\n",
     "prec.plot(ax=ax[0], legend=True, grid=True)\n",
@@ -369,7 +369,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "SPEI",
    "language": "python",
    "name": "python3"
   },
@@ -383,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4
  },
