fix debilt name

--- a/doc/examples/example01_indices.ipynb
+++ b/doc/examples/example01_indices.ipynb
@@ -73,7 +73,7 @@
     "df = pd.read_csv(\"data/DEBILT.csv\", index_col=0, parse_dates=True)\n",
     "prec = df[\"Prec [m/d] 260_DEBILT\"].multiply(1e3).rename(\"prec\")\n",
     "evap = df[\"Evap [m/d] 260_DEBILT\"].multiply(1e3).rename(\"evap\")\n",
-    "head = df[\"Head [m] DEBILT\"].rename(\"B32C0572\").dropna()\n",
+    "head = df[\"Head [m] B32C0572_DEBILT\"].rename(\"B32C0572\").dropna()\n",
     "\n",
     "fig, ax = plt.subplots(3, 1, figsize=(12, 8), sharex=True)\n",
     "prec.plot(ax=ax[0], legend=True, grid=True)\n",
