--- a/doc/examples/example04_package_comparison.ipynb
+++ b/doc/examples/example04_package_comparison.ipynb
@@ -69,7 +69,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
@@ -87,7 +87,7 @@
                 "df = pd.read_csv(\"data/DEBILT.csv\", index_col=0, parse_dates=True)\n",
                 "df.index.name = \"date\"\n",
                 "prec = df[\"Prec [m/d] 260_DEBILT\"].multiply(1e3).rename(\"rain\")\n",
-                "head = df[\"Head [m] DEBILT\"].rename(\"B32C0572\").dropna()\n",
+                "head = df[\"Head [m] B32C0572_DEBILT\"].rename(\"B32C0572\").dropna()\n",
                 "\n",
                 "prec.plot(grid=True, linewidth=0.5, title=\"Precipitation\", figsize=(6.5, 4));"
             ]
