--- a/doc/examples/example03_drought_NL.ipynb
+++ b/doc/examples/example03_drought_NL.ipynb
@@ -60,7 +60,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": null,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -89,7 +89,7 @@
                 "df = pd.read_csv(\"data/DEBILT.csv\", index_col=0, parse_dates=True)\n",
                 "prec = df[\"Prec [m/d] 260_DEBILT\"].multiply(1e3).rename(\"prec\")\n",
                 "evap = df[\"Evap [m/d] 260_DEBILT\"].multiply(1e3).rename(\"evap\")\n",
-                "head = df[\"Head [m] DEBILT\"].rename(\"B32C0572\").dropna()\n",
+                "head = df[\"Head [m] B32C0572_DEBILT\"].rename(\"B32C0572\").dropna()\n",
                 "today = df.index[-1]\n",
                 "yesterday = df.index[-2]"
             ]
@@ -299,7 +299,7 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": ".venv",
+            "display_name": "SPEI",
             "language": "python",
             "name": "python3"
         },
@@ -313,7 +313,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.13.1"
+            "version": "3.12.3"
         },
         "orig_nbformat": 4
     },
