--- a/doc/examples/example06_treshold.ipynb
+++ b/doc/examples/example06_treshold.ipynb
@@ -33,7 +33,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": null,
             "id": "34ae712e",
             "metadata": {},
             "outputs": [],
@@ -41,7 +41,7 @@
                 "df = pd.read_csv(\"data/DEBILT.csv\", index_col=0, parse_dates=True)\n",
                 "prec = df[\"Prec [m/d] 260_DEBILT\"].multiply(1e3).rename(\"prec\")\n",
                 "evap = df[\"Evap [m/d] 260_DEBILT\"].multiply(1e3).rename(\"evap\")\n",
-                "head = df[\"Head [m] DEBILT\"].rename(\"head\").dropna()"
+                "head = df[\"Head [m] B32C0572_DEBILT\"].rename(\"head\").dropna()"
             ]
         },
         {
@@ -219,7 +219,7 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": ".venv",
+            "display_name": "SPEI",
             "language": "python",
             "name": "python3"
         },
@@ -233,7 +233,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.13.1"
+            "version": "3.12.3"
         }
     },
     "nbformat": 4,
