fix headers in nb

--- a/docs/examples/example04_package_comparison.ipynb
+++ b/docs/examples/example04_package_comparison.ipynb
@@ -502,7 +502,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "# Compute Standardized Groundwater Index"
+                "## Compute Standardized Groundwater Index"
             ]
         },
         {
