update doc headers

--- a/docs/examples/example04_package_comparison.ipynb
+++ b/docs/examples/example04_package_comparison.ipynb
@@ -426,7 +426,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "## Plot and compare"
+                "### Plot and compare"
             ]
         },
         {
