update notebook titles

--- a/docs/examples/example01_indices.ipynb
+++ b/docs/examples/example01_indices.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook 01 - Indices\n",
+    "# Standardized Indices\n",
     "\n",
     "*Martin Vonk - 2022*\n",
     "\n",
