--- a/docs/examples/example02_distributions.ipynb
+++ b/docs/examples/example02_distributions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook 02 - Distributions\n",
+    "# Distributions\n",
     "\n",
     "*Martin Vonk - 2025*\n",
     "\n",
