--- a/docs/examples/example03_drought_NL.ipynb
+++ b/docs/examples/example03_drought_NL.ipynb
@@ -4,7 +4,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "# Notebook 03 - Drought in the Netherlands with Time Series Modeling\n",
+                "# Drought Prediction with Time Series Modeling\n",
                 "\n",
                 "*Martin Vonk - 2022*\n",
                 "\n",
