--- a/docs/examples/example04_package_comparison.ipynb
+++ b/docs/examples/example04_package_comparison.ipynb
@@ -5,7 +5,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "# Notebook 04 - Package Comparison\n",
+                "# Package Comparison\n",
                 "\n",
                 "*Martin Vonk - 2023*\n",
                 "\n",
