--- a/docs/examples/example05_multiyear_drought.ipynb
+++ b/docs/examples/example05_multiyear_drought.ipynb
@@ -4,7 +4,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "# Analyzing multi-year droughts\n",
+                "# Analyzing Multi-Year Droughts\n",
                 "\n",
                 "After van Mourik, J. and Ruijsch, D. and van der Wiel, K. and Hazeleger, W. and Wanders, N. (2025) - [Regional drivers and characteristics of multi-year droughts](https://doi.org/10.1016/j.wace.2025.100748)"
             ]
