--- a/docs/examples/example06_treshold.ipynb
+++ b/docs/examples/example06_treshold.ipynb
@@ -5,7 +5,7 @@
             "id": "eaa846c5",
             "metadata": {},
             "source": [
-                "# Threshold drought\n",
+                "# Threshold Drought\n",
                 "\n",
                 "## Load packages"
             ]
