--- a/docs/examples/example04_package_comparison.ipynb
+++ b/docs/examples/example04_package_comparison.ipynb
@@ -58,7 +58,7 @@
                 "prec = df[\"Prec [m/d] 260_DEBILT\"].multiply(1e3).rename(\"rain\")\n",
                 "head = df[\"Head [m] B32C0572_DEBILT\"].rename(\"B32C0572\").dropna()\n",
                 "\n",
-                "prec.plot(grid=True, linewidth=0.5, title=\"Precipitation\", figsize=(6.5, 4));"
+                "_ = prec.plot(grid=True, linewidth=0.5, title=\"Precipitation\", figsize=(6.5, 4))"
             ]
         },
         {
@@ -69,9 +69,9 @@
             "source": [
                 "# get rolling sum\n",
                 "prec_rsum = prec.resample(\"ME\").sum()\n",
-                "prec_rsum.plot(\n",
+                "_ = prec_rsum.plot(\n",
                 "    grid=True, linewidth=0.5, title=\"Precipitation, monthly sum\", figsize=(6.5, 4)\n",
-                ");"
+                ")"
             ]
         },
         {
