--- a/docs/examples/example04_package_comparison.ipynb
+++ b/docs/examples/example04_package_comparison.ipynb
@@ -215,11 +215,11 @@
                 "from rpy2.robjects import pandas2ri\n",
                 "from rpy2.robjects.packages import importr\n",
                 "\n",
-                "pandas2ri.activate()\n",
-                "\n",
                 "sr = importr(\"SPEI\")\n",
                 "\n",
-                "spir_res = sr.spi(prec_rsum.values, scale=3)\n",
+                "with pandas2ri.converter.context(): # pandas2ri.activate()\n",
+                "    spir_res = sr.spi(prec_rsum.values, scale=3)\n",
+                "\n",
                 "r_spi = pd.Series(spir_res[2].ravel(), index=prec_rsum.index, name=\"SPI\")\n",
                 "r_spi"
             ]
